--- a/index.html
+++ b/index.html
@@ -307,18 +307,18 @@
     </section>
 
     <!-- WHITEPAPER -->
-    <section>
-      <h2>Whitepaper</h2>
-      <p>
-        Ready to delve deeper into our vision? Stay tuned for our official
-        whitepaper, detailing how $GRATE plans to revolutionize meme-token culture.
-      </p>
-      <div class="button-row">
-        <a href="whitepaper.pdf" target="_blank" class="btn">
-          Download Whitepaper
-        </a>
-      </div>
-    </section>
+  <section>
+  <h2>Whitepaper</h2>
+  <p>
+    Ready to delve deeper into our vision? Read our official whitepaper to learn more about how $GRATE plans to revolutionize meme-token culture.
+  </p>
+  <div class="button-row">
+    <!-- Change the link to point to whitepaper.html -->
+    <a href="whitepaper.html" class="btn">
+      Read Whitepaper
+    </a>
+  </div>
+</section>
 
   </div>
 
