--- a/whitepaper.html
+++ b/whitepaper.html
@@ -13,7 +13,6 @@
     rel="stylesheet"
   />
 
-  <!-- Include the same style as your index or link to a common stylesheet -->
   <style>
     /* GLOBAL RESET & BASE */
     * {
@@ -46,6 +45,11 @@
       margin-bottom: 12px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     }
+    header p {
+      font-weight: 300;
+      color: #ddd;
+      font-size: 1rem;
+    }
     section {
       background: rgba(255, 255, 255, 0.05);
       border-radius: 8px;
@@ -61,6 +65,35 @@
       text-align: center;
       text-transform: uppercase;
       letter-spacing: 1.5px;
+    }
+    section h3 {
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: #fff;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+    }
+    section p {
+      font-weight: 300;
+      line-height: 1.6;
+      color: #ddd;
+      margin-bottom: 15px;
+    }
+    ul {
+      list-style: none;
+      padding-left: 20px;
+      margin-bottom: 15px;
+    }
+    ul li {
+      margin-bottom: 10px;
+      position: relative;
+      padding-left: 15px;
+    }
+    ul li:before {
+      content: "•";
+      position: absolute;
+      left: 0;
+      color: gold;
     }
     .button-row {
       text-align: center;
@@ -92,20 +125,126 @@
     <!-- HEADER -->
     <header>
       <h1>$GRATE Whitepaper</h1>
-      <p>The official whitepaper detailing how $GRATE plans to revolutionize meme-token culture.</p>
+      <p>Version 1.0 - February 2025</p>
     </header>
 
-    <!-- WHITEPAPER CONTENT -->
+    <!-- INTRODUCTION -->
     <section>
-      <h2>Whitepaper Content</h2>
-      <p>
-        <!-- Insert your full whitepaper text here -->
-        Your whitepaper content goes here. You might break it into multiple sections, add images, or include a table of contents for longer documents.
-      </p>
-      <div class="button-row">
-        <!-- Link to the downloadable PDF version -->
-        <a href="whitepaper.pdf" download class="btn">Download PDF</a>
-      </div>
+      <h2>Introduction</h2>
+      <p>$GRATE is more than just a meme token; it's a movement. Built on the Solana blockchain and launched through Pump.fun, $GRATE aims to create a community-driven, high-energy ecosystem where holders benefit from engagement, longevity, and innovation. Our mission is to build a sustainable and scalable crypto project with real-world utility and long-term value beyond speculation.</p>
+    </section>
+
+    <!-- TOKEN OVERVIEW -->
+    <section>
+      <h2>Token Overview</h2>
+      <p><strong>Name:</strong> $GRATE</p>
+      <p><strong>Blockchain:</strong> Solana</p>
+      <p><strong>Launch Platform:</strong> Pump.fun</p>
+      <p><strong>Total Supply:</strong> 1 Billion (1B)</p>
+      <p><strong>Current Supply (Pre-Bonding):</strong> 1B (Unbonded tokens will be burned upon bonding)</p>
+      <p><strong>Developer Holdings:</strong> 215M $GRATE (21.5% pre-bonding)</p>
+      <p><strong>Liquidity:</strong> To be bonded on Raydium</p>
+      <p><strong>Contract Address:</strong> FKVYQSkLdg5hYxxPwxFW7JrTVu6eq2sJLstd9HHppump</p>
+    </section>
+
+    <!-- VISION & PURPOSE -->
+    <section>
+      <h2>Vision & Purpose</h2>
+      <p>The mission of $GRATE is to establish a strong and sustainable ecosystem that evolves with the needs of its holders. Unlike short-lived meme tokens, $GRATE is designed for long-term growth with a focus on community engagement, token distribution incentives, and market stability.</p>
+    </section>
+
+    <!-- RELEASE & DISTRIBUTION SCHEDULE -->
+    <section>
+      <h2>Release & Distribution Schedule</h2>
+      <h3>Phase 1: Pre-Bonding (Current)</h3>
+      <ul>
+        <li>Deployment on Solana via Pump.fun</li>
+        <li>Initial community building on X & Telegram</li>
+        <li>Early buy-ins and organic growth</li>
+        <li>Liquidity pool expansion towards bonding</li>
+      </ul>
+      <h3>Phase 2: Bonding to Raydium (Upcoming)</h3>
+      <ul>
+        <li>Liquidity locked permanently to ensure price stability</li>
+        <li>Token burning of unbonded supply to reduce inflation</li>
+        <li>Community engagement initiatives to drive adoption</li>
+        <li>Giveaway structure launch to reward active holders</li>
+      </ul>
+    </section>
+
+    <!-- GIVEAWAY STRUCTURE -->
+    <section>
+      <h2>Giveaway Structure (Initial Plan)</h2>
+      <p>To encourage active participation and holder retention, the following giveaway structure will be implemented after bonding:</p>
+      <h3>Key Milestones & Incentives</h3>
+      <ul>
+        <li>
+          <strong>10K MC Milestone:</strong>
+          <ul>
+            <li>Community airdrop to early adopters</li>
+            <li>Engagement contest (top posts about $GRATE win tokens)</li>
+          </ul>
+        </li>
+        <li>
+          <strong>50K MC Milestone:</strong>
+          <ul>
+            <li>Larger token airdrop for holders of $GRATE</li>
+            <li>Viral "shill contest" (top content creators rewarded)</li>
+          </ul>
+        </li>
+        <li>
+          <strong>100K MC Milestone:</strong>
+          <ul>
+            <li>Major giveaway with prizes in tokens and exclusive $GRATE swag</li>
+            <li>Begin partnerships to increase reach</li>
+          </ul>
+        </li>
+        <li>
+          <strong>250K+ MC Milestone:</strong>
+          <ul>
+            <li>Holder reward initiatives: Monthly giveaways for long-term holders</li>
+            <li>Launch of future project phases and strategic campaigns</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <!-- POST-BONDING TOKEN MANAGEMENT -->
+    <section>
+      <h2>Post-Bonding Token Management Plan</h2>
+      <p><strong>Developer Holdings:</strong> 215M $GRATE (Pre-Bonding)</p>
+      <p><strong>Marketing & Partnerships:</strong> 50M for driving adoption and exposure</p>
+      <p><strong>Giveaways & Community Engagement:</strong> 50M to reward long-term supporters and incentivize growth</p>
+      <p><strong>Market Stability & Liquidity Support:</strong> 65M to maintain healthy trading activity and price stability</p>
+    </section>
+
+    <!-- SECURITY & SUSTAINABILITY -->
+    <section>
+      <h2>Security & Sustainability</h2>
+      <p><strong>Liquidity Locking:</strong> Bonding on Raydium ensures a safe and trustable liquidity pool.</p>
+      <p><strong>No Developer Dumping:</strong> Fair launch principles with full transparency in token allocation.</p>
+      <p><strong>Community-Centric Approach:</strong> Governance mechanisms will decentralize decision-making and project direction.</p>
+    </section>
+
+    <!-- HOW TO GET INVOLVED -->
+    <section>
+      <h2>How to Get Involved</h2>
+      <p><strong>Engage:</strong> Join the $GRATE community by participating in discussions and sharing your ideas.</p>
+      <p><strong>Buy & Hold:</strong> Support the ecosystem by being an early participant in its growth.</p>
+      <p><strong>Spread Awareness:</strong> Help $GRATE reach a wider audience through social media engagement and outreach.</p>
+    </section>
+
+    <!-- CONCLUSION -->
+    <section>
+      <h2>Conclusion</h2>
+      <p>$GRATE is a community-first, incentive-driven token designed to make a lasting impact in the Solana ecosystem. With structured token distribution, market stability plans, and community-driven growth, we are committed to building a long-term, sustainable token economy.</p>
+      <p>The future of $GRATE is in the hands of its holders—together, we make it thrive.</p>
+      <p>🚀 Follow us on <a href="https://x.com/GrateToken" target="_blank">X</a> | 🌐 Visit our <a href="https://gratetoken.com" target="_blank">Website</a></p>
+    </section>
+
+    <!-- DOWNLOAD PDF BUTTON -->
+    <section class="button-row">
+      <a href="whitepaper.pdf" download class="btn">Download PDF</a>
     </section>
 
     <!-- FOOTER -->
