--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -28,6 +28,15 @@
       display: flex;
       flex-direction: column;
     }
+    /* Global anchor styles */
+    a {
+      color: gold;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
     .wrapper {
       max-width: 900px;
       margin: 0 auto;
@@ -49,6 +58,19 @@
       font-weight: 300;
       color: #ddd;
       font-size: 1rem;
+    }
+    .nav-button {
+      display: inline-block;
+      background: gold;
+      color: #111;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-weight: 600;
+      margin: 20px 0;
+      transition: 0.3s;
+    }
+    .nav-button:hover {
+      background: #fff;
     }
     section {
       background: rgba(255, 255, 255, 0.05);
@@ -122,6 +144,11 @@
 </head>
 <body>
   <div class="wrapper">
+    <!-- Navigation: Back to Main Page -->
+    <div class="button-row" style="text-align: left;">
+      <a href="/" class="nav-button">Back to Main Page</a>
+    </div>
+
     <!-- HEADER -->
     <header>
       <h1>$GRATE Whitepaper</h1>
