--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   </p>
   <div class="button-row">
     <!-- Change the link to point to whitepaper.html -->
-    <a href="/whitepaper/index.html" class="btn">
+    <a href="/whitepaper/" class="btn">
       Read Whitepaper
     </a>
   </div>
