--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -24,6 +24,11 @@
       color: #f1f1f1;
     }
     
+    /* @page rule to remove default print margins (note: not all browsers respect this fully) */
+    @page {
+      margin: 0;
+    }
+    
     /* Global anchor styles */
     a {
       color: gold;
