--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -18,13 +18,14 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100vh;
       background: linear-gradient(120deg, #111 30%, #444 100%);
+      background-attachment: fixed; /* Ensures the background stays fixed during scroll/bounce */
       font-family: 'Poppins', sans-serif;
       color: #f1f1f1;
     }
     
-    /* @page rule to remove default print margins (note: not all browsers respect this fully) */
+    /* @page rule to remove default print margins */
     @page {
       margin: 0;
     }
@@ -285,19 +286,4 @@
     <section>
       <h2>Conclusion</h2>
       <p>$GRATE is a community-first, incentive-driven token designed to make a lasting impact in the Solana ecosystem. With structured token distribution, market stability plans, and community-driven growth, we are committed to building a long-term, sustainable token economy.</p>
-      <p>The future of $GRATE is in the hands of its holders—together, we make it thrive.</p>
-      <p>🚀 Follow us on <a href="https://x.com/GrateToken" target="_blank">X</a> | 🌐 Visit our <a href="https://gratetoken.com" target="_blank">Website</a></p>
-    </section>
-
-    <!-- Download PDF Button -->
-    <section class="button-row">
-      <a href="whitepaper.pdf" download class="btn">Download PDF</a>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      &copy; 2025 $GRATE Token. All rights reserved.
-    </footer>
-  </div>
-</body>
-</html>
+      <p>The future of $GRATE is in the hands of its holders—together
