--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -20,23 +20,16 @@
       padding: 0;
       box-sizing: border-box;
     }
-    /* Ensure the background fills the entire viewport and stays fixed */
-    html, body {
-      min-height: 100vh;
+    body {
+      font-family: 'Poppins', sans-serif;
       background: linear-gradient(120deg, #111 30%, #444 100%) no-repeat center center fixed;
       background-size: cover;
-      /* Allow natural scrolling but try to contain overscroll so white isn’t visible */
-      overscroll-behavior: contain;
-      font-family: 'Poppins', sans-serif;
       color: #f1f1f1;
-    }
-    /* Optional: If you experience any unwanted horizontal scroll */
-    body {
-      overflow-x: hidden;
-    }
-    body {
+      min-height: 100vh;
       line-height: 1.6;
       padding: 20px;
+      /* Allow natural scrolling while containing overscroll */
+      overscroll-behavior: contain;
     }
     .wrapper {
       max-width: 900px;
@@ -147,7 +140,7 @@
     <section id="introduction">
       <h2>Introduction</h2>
       <p>
-        $GRATE is more than just a meme token; it's a movement. Built on the Solana blockchain and launched through Pump.fun, $GRATE aims to create a community-driven, high-energy ecosystem where holders benefit from engagement, longevity, and innovation. Our mission is to build a sustainable and scalable crypto project with real-world utility and long-term value beyond speculation.
+        $GRATE is more than just a meme token; it's a movement. Built on the Solana blockchain and launched through Pump.fun, $GRATE is designed to foster a community-driven ecosystem focused on engagement and growth. We make no promises regarding additional utilities, NFTs, or extra features beyond the token itself.
       </p>
     </section>
 
@@ -169,11 +162,11 @@
         </div>
         <div class="col">
           <h3>Total Supply</h3>
-          <p>1 Billion (1B)</p>
+          <p>1 Billion</p>
         </div>
         <div class="col">
           <h3>Current Supply</h3>
-          <p>1B (Pre-Bonding - Unbonded tokens will be burned upon bonding)</p>
+          <p>1 Billion (Pre-Bonding to Raydium)</p>
         </div>
         <div class="col">
           <h3>Developer Holdings</h3>
@@ -196,7 +189,7 @@
     <section id="vision">
       <h2>Vision & Purpose</h2>
       <p>
-        The mission of $GRATE is to establish a strong and sustainable ecosystem that evolves with the needs of its holders. Unlike short-lived meme tokens, $GRATE is designed for long-term growth with a focus on community engagement, token distribution incentives, and market stability.
+        Our vision is to build a fair, community-driven token ecosystem that grows over time. While we focus on equitable token distribution and market stability, no additional utilities, NFTs, or extra benefits are guaranteed. Our long-term plan envisions a progression—from an initial market cap goal of 1M, scaling through 10M and 100M, and potentially up to 1B. These targets are aspirational and subject to market conditions.
       </p>
     </section>
 
@@ -212,10 +205,10 @@
       </ul>
       <p><strong>Phase 2: Bonding to Raydium (Upcoming)</strong></p>
       <ul>
-        <li>Liquidity locked permanently to ensure price stability</li>
-        <li>Token burning of unbonded supply to reduce inflation</li>
-        <li>Community engagement initiatives to drive adoption</li>
-        <li>Giveaway structure launch to reward active holders</li>
+        <li>Liquidity will be locked permanently to support price stability</li>
+        <li>Unbonded tokens will be burned to reduce inflation</li>
+        <li>Community engagement initiatives may be introduced post-bonding</li>
+        <li>Potential giveaways will be considered after bonding based on market performance</li>
       </ul>
     </section>
 
@@ -223,31 +216,22 @@
     <section id="giveaways">
       <h2>Giveaway Structure & Milestones</h2>
       <p>
-        To encourage active participation and holder retention, the following giveaway structure will be implemented after bonding:
+        After bonding—and subject to market conditions—community rewards may be implemented. The following milestones outline potential reward triggers:
       </p>
       <ul>
-        <li><strong>10K MC Milestone:</strong>
+        <li><strong>85K MC Milestone:</strong>
           <ul>
-            <li>Community airdrop to early adopters</li>
-            <li>Engagement contest (top posts about $GRATE win tokens)</li>
-          </ul>
-        </li>
-        <li><strong>50K MC Milestone:</strong>
-          <ul>
-            <li>Larger token airdrop for holders</li>
-            <li>Viral "shill contest" (top content creators rewarded)</li>
+            <li>An initial giveaway may be triggered upon reaching approximately an 85K market cap.</li>
           </ul>
         </li>
         <li><strong>100K MC Milestone:</strong>
           <ul>
-            <li>Major giveaway with prizes in tokens and exclusive $GRATE swag</li>
-            <li>Initiation of strategic partnerships</li>
+            <li>Additional community rewards may be distributed at the 100K market cap level.</li>
           </ul>
         </li>
-        <li><strong>250K+ MC Milestone:</strong>
+        <li><strong>Up to 1B MC Milestone:</strong>
           <ul>
-            <li>Monthly giveaways for long-term holders</li>
-            <li>Launch of future project phases and strategic campaigns</li>
+            <li>As the market cap grows toward 1 billion, further giveaways and rewards may be introduced.</li>
           </ul>
         </li>
       </ul>
@@ -259,8 +243,8 @@
       <ul>
         <li><strong>Developer Holdings:</strong> 215M $GRATE (Pre-Bonding)</li>
         <li><strong>Marketing & Partnerships:</strong> 50M for driving adoption and exposure</li>
-        <li><strong>Giveaways & Community Engagement:</strong> 50M to reward long-term supporters</li>
-        <li><strong>Market Stability & Liquidity Support:</strong> 65M to maintain healthy trading activity and price stability</li>
+        <li><strong>Community Engagement:</strong> 50M may be allocated for potential rewards (post-bonding)</li>
+        <li><strong>Market Stability & Liquidity Support:</strong> 65M to help maintain healthy trading activity and price stability</li>
       </ul>
     </section>
 
@@ -268,9 +252,9 @@
     <section id="security">
       <h2>Security & Sustainability</h2>
       <ul>
-        <li><strong>Liquidity Locking:</strong> Bonding on Raydium ensures a safe and trustable liquidity pool.</li>
-        <li><strong>No Developer Dumping:</strong> Fair launch principles with full transparency in token allocation.</li>
-        <li><strong>Community-Centric Approach:</strong> Governance mechanisms will decentralize decision-making and project direction.</li>
+        <li><strong>Liquidity Locking:</strong> Bonding on Raydium ensures a secure liquidity pool.</li>
+        <li><strong>Transparent Allocation:</strong> The team commits to clear, open token allocation and stewardship.</li>
+        <li><strong>Community Governance:</strong> Holders will have a say in how funds are spent to grow $GRATE, provided this principle is maintained for all coin holders.</li>
       </ul>
     </section>
 
@@ -288,12 +272,24 @@
     <section id="conclusion">
       <h2>Conclusion</h2>
       <p>
-        $GRATE is a community-first, incentive-driven token designed to make a lasting impact in the Solana ecosystem. With structured token distribution, market stability plans, and community-driven growth, we are committed to building a long-term, sustainable token economy. The future of $GRATE is in the hands of its holders—together, we make it thrive.
+        $GRATE is a community-first, incentive-driven token. We are committed to building a sustainable and fair token ecosystem driven by community engagement and market stability. However, no additional utilities, NFTs, or extra benefits are promised beyond the token itself. Our milestones—from an initial 1M market cap goal, scaling through 10M and 100M, and potentially up to 1B—are aspirational and subject to market conditions.
       </p>
       <p>
-        🚀 Follow us on <a href="https://x.com/GrateToken" target="_blank">X</a> |
-        🌐 Visit our <a href="https://gratetoken.com" target="_blank">Website</a>
+        The future of $GRATE is in the hands of its holders—together, we make it thrive.
       </p>
+      <p>
+        🚀 Follow us on <a href="https://x.com/GrateToken" target="_blank">X</a> | 🌐 Visit our <a href="https://gratetoken.com" target="_blank">Website</a>
+      </p>
+      <p style="font-size: 0.8rem; color: #aaa; margin-top: 20px;">
+        Disclaimer: This whitepaper is for informational purposes only and is not legally binding. The project team reserves the right to update this document as the project evolves.
+      </p>
+    </section>
+
+    <!-- PDF DOWNLOAD SECTION -->
+    <section id="download">
+      <div class="button-row" style="text-align: center; margin-top: 30px;">
+        <a href="whitepaper.pdf" download class="btn">Download PDF</a>
+      </div>
     </section>
 
     <!-- FOOTER -->
