--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -18,7 +18,7 @@
       box-sizing: border-box;
     }
 
-    /* Set full-page background */
+    /* Full-page background */
     html, body {
       min-height: 100vh;
       background: linear-gradient(120deg, #111 30%, #444 100%) no-repeat center center fixed;
@@ -37,7 +37,7 @@
       padding: 40px 20px;
       background: rgba(0, 0, 0, 0.5);
       border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
     header {
@@ -49,7 +49,7 @@
       font-weight: 700;
       color: #f1f1f1;
       margin-bottom: 8px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     }
     header p.version {
       font-weight: 300;
@@ -62,7 +62,7 @@
       padding: 25px;
       background: rgba(255, 255, 255, 0.05);
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
     section h2 {
       font-size: 1.8rem;
@@ -104,21 +104,20 @@
       background: rgba(255, 255, 255, 0.1);
       border-radius: 8px;
       padding: 15px;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.3);
     }
     .col h3 {
       font-size: 1rem;
       font-weight: 600;
       color: gold;
       margin-bottom: 8px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
     .footer {
       text-align: center;
       font-size: 0.9rem;
       color: #ccc;
       margin-top: 20px;
-      background: transparent;
     }
     a {
       color: gold;
@@ -129,7 +128,7 @@
       text-decoration: underline;
     }
 
-    /* Print-specific adjustments to force background and remove white borders */
+    /* Print-specific adjustments to help remove extra white margins */
     @media print {
       html, body {
         margin: 0;
@@ -142,12 +141,6 @@
         padding: 20px !important;
         box-shadow: none !important;
         border-radius: 0 !important;
-        background: rgba(0, 0, 0, 0.5) !important;
-      }
-      .footer {
-        margin-top: 0 !important;
-        background: rgba(0, 0, 0, 0.5) !important;
-        padding-bottom: 20px;
       }
       * {
         -webkit-print-color-adjust: exact !important;
@@ -158,6 +151,11 @@
 </head>
 <body>
   <div class="wrapper">
+    <!-- Navigation Buttons -->
+    <div class="button-row" style="text-align: left; margin-bottom: 20px;">
+      <a href="/" class="btn" style="padding: 10px 18px;">Back to Main Page</a>
+    </div>
+
     <!-- HEADER -->
     <header>
       <h1>$GRATE Whitepaper</h1>
@@ -217,7 +215,7 @@
     <section id="vision">
       <h2>Vision & Purpose</h2>
       <p>
-        Our vision is to build a fair, community-driven token ecosystem that evolves over time. While we focus on balanced token distribution and market stability, we are fully committed to rewarding our community. A portion of funds will be allocated for strategic partnerships, marketing, and community growth initiatives. Our milestones are aspirational—beginning with modest targets and scaling upward as momentum builds.
+        Our vision is to build a fair, community-driven token ecosystem that evolves over time. While we focus on balanced token distribution and market stability, we are fully committed to rewarding our community. A portion of funds will be allocated to secure strategic partnerships, marketing, and community growth initiatives. Our milestones are aspirational—starting with modest targets and scaling upward as momentum builds.
       </p>
     </section>
 
@@ -244,7 +242,7 @@
     <section id="giveaways">
       <h2>Giveaway Structure & Milestones</h2>
       <p>
-        We are dedicated to rewarding our community. As the market grows, we will implement ongoing giveaways and rewards that reflect the level of support and success achieved—without locking in fixed numbers. Early rewards will be introduced as soon as market momentum is positive, with further initiatives evolving as the project grows.
+        We are dedicated to rewarding our community. As the market grows, we will implement ongoing giveaways and rewards that reflect the level of support and success achieved—without locking in fixed numbers. Early rewards will be introduced as soon as positive market momentum is observed, with further initiatives evolving as the project grows.
       </p>
     </section>
 
@@ -299,7 +297,7 @@
     <!-- PDF DOWNLOAD SECTION -->
     <section id="download">
       <div class="button-row" style="text-align: center; margin-top: 30px;">
-        <a href="whitepaper.pdf" download class="btn">Download PDF</a>
+        <a href="whitepaper.pdf" download class="btn" style="padding: 10px 18px;">Download PDF</a>
       </div>
     </section>
 
